<resources>
    <string name="app_name">GameGallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="Todos">Todos</string>
    <string name="_3rdParty">3rd Party</string>
    <string name="PC">PC</string>
    <string name="PS4">PS4</string>
    <string name="Xbox">Xbox</string>
    <string name="Switch">Switch</string>

    <string name="menu_genre_Action">Accion</string>
    <string name="menu_genre_Terror">Terror</string>
    <string name="menu_genre_Shooter">Shooter</string>
    <string name="menu_genre_Race">Carreras</string>
    <string name="menu_genre_Sport">Deportes</string>
    <string name="menu_genre_RPG">RPG</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="registrar">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="repetirPassword">Repetir Contraseña</string>

    <string name="seleccionarConsolas">Seleccione las consolas a mostrar</string>
    <string name="logo_juego">Logo del juego</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="comentar">Comentar</string>
    <string name="titulo_comentar">Escriba aquí su comentario</string>
</resources>
