<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:id="@+id/linearLayoutRegistro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/lblRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblCorreoReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtCorreoReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblUserReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtUserReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblRepetirPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repetirPassword"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtRepetirPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:onClick="registrarse"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>